# miza-datahub

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: miza_datahub.yml
doc/: ARCHITECTURE_IMPLEMENTATION_PLAN.md  trace_model.mmd  trace_model_2.mmd
miza_datahub/: README.md  pyproject.toml  requirements.txt  setup.cfg
miza_datahub/data/: OEE.xlsx
miza_datahub/src/miza_datahub/common/: config_const.py  config_util.py  singleton.py
miza_datahub/src/miza_datahub/influxdb/: influx_repository.py  influx_rest_client.py
miza_datahub/src/miza_datahub/influxdb/queries/: paper_machine_query.py  paper_oee_query.py  production_time_query.py
miza_datahub/src/miza_datahub/influxdb/writers/: paper_daily_oee_writer.py
miza_datahub/src/miza_datahub/readers/: base_reader.py  finished_product_quality_analyzer.py  oee_analyzer.py  quality_analyzer.py
miza_datahub/src/miza_datahub/services/: oee_service.py  reader_factory.py
miza_datahub/test/services/: test_reader_factory.py
src/: app.py
