[project]
name = "miza-datahub"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py311']

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "requests"]
ignore_missing_imports = true
