[metadata]
name = miza-datahub
version = 1.0.0

url = http://github.com/chanelcolgate/miza-datahub
author = chanelcolgate
author_email = "chanelcolgate" <github@chanelcolgate.com>

description = This package does amazing things.

long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE
classifiers =
	License :: OSI Approved :: MIT License

[options]
package_dir =
	=src
packages = find:
include_package_data = True
install_requires = 
	numpy
	pandas
	requests
	openpyxl

[options.packages.find]
where = src
exclude =
	test*

[tox:tox]
isolated_build = True
envlist = py311

[flake8]
max-line-length = 80

[testenv]
deps =
	pytest
	pytest-cov
commands =
	pytest {posargs}

[testenv:typecheck]
deps =
    black
	mypy
	pytest
	types-termcolor
commands =
	black {posargs:--check --diff src test}
    mypy src test

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
	flake8
	flake8-bugbear
commands =
	flake8 {posargs:--ignore=E203,W503 src test}
